# GLoOD

./: .gitignore  LICENSE  Makefile  README.md  build_env_base.sh  build_torch_128.sh  pyproject.toml  requirements.txt  uninstall.sh
config/: assess_boundaries_circles.yaml  assess_drag_force_remote_matnum.yaml  assess_fieldwise_remote_matnum.yaml  assess_profiles_remote_matnum.yaml  assess_vonkarman_lag_remote_matnum.yaml  assess_vonkarman_vtkp06_lag_remote_matnum.yaml  build_dataset_cavity_matnum.yaml  build_dataset_circles.yaml  build_dataset_matnum.yaml  build_dataset_vonkarman.yaml  export_fieldwise_examples_remote_matnum.yaml  infer_matnum.yaml  infer_matnum_identity.yaml  paper_snapshot_grid_examples.yaml  paper_snapshot_grid_from_saved.yaml  paper_snapshot_grid_vonkarmann.yaml  plot_assess_boundaries_circles.yaml  plot_square_domain_sections.yaml  process_stats_kfold.yaml  process_stats_matnum.yaml  spot_problematic_examples_inference_cavity_matnum.yaml  spot_problematic_examples_remote_matnum.yaml  train_glood_identity_kfold.yaml  train_glood_identity_one_run.yaml  train_glood_kfold.yaml  train_glood_one_run.yaml  train_glood_swin_identity_kfold.yaml  train_glood_swin_identity_one_run.yaml  train_glood_swin_kfold.yaml  train_glood_swin_one_run.yaml  train_swin_kfold.yaml  train_swin_transformer_one_run.yaml  train_unet_one_run.yaml
glood/: assess_boundaries.py  assess_drag_force.py  assess_drag_force_remote.py  assess_fieldwise.py  assess_problematic_examples.py  assess_profiles.py  assess_vonkarman_lag.py  build_dataset.py  export_fieldwise_examples.py  load.py  (+9 more)
(+102 files in other folders)
